# BA_combination

./: .gitignore  CHANGELOG.md
BA_firsttry/: Datagrabber.py  Dataprep2.py  Future.py  GloablVariableStorage.py  LSEG.py  NeuralNetworkSklearn.py  NeuralNetworksPytorch.py  NeuralNetworksPytorch_minimal.py  OLS.py  RandomForest.py  RidgeRegession.py  createScoreModels.py  scoreModels.xlsx
BA_secondtry/: .env.example  .gitignore  README.md  artifact_paths.py  config.yaml  datasets.py  engineering.py  evaluate.py  fetch_history.py  lstm.py  metrics.py  models.py  predict_live.py  pyproject.toml  refinitiv_client.py  requirements.txt  run_backtest_signals.py  run_live_stub.py  run_train.py  run_train_all_models.py  run_train_sklearn.py  run_train_sklearn_models.py  run_train_sklearn_ols.py  run_train_sklearn_random_forest.py  run_train_sklearn_ridge.py  scaler.pkl  scaler.py  sequencing.py  sklearn_backend.py  train.py  utils.py
BA_secondtry/tests/: test_features.py  test_refinitiv_client.py  test_sequencing.py  test_signals.py
Combination/: CODE_IMPROVEMENTS.md  ConfigManager.py  DIRECTIONAL_ACCURACY_ERKLAERUNG.md  Datagrabber.py  Dataprep.py  FamaFrench.py  GloablVariableStorage.py  LSEG.py  ModelComparison.py  Models_Wrapper.py  Plotting.py  README.md  Tutorial_Code_Erklaerung.ipynb  check_company_files.py  check_data.py  check_predictions.py  compare_ffc_values.py  config.yaml  diagnose_directional_accuracy.py  generate_plots.py  logger_config.py  main.py  plot_datastorage_prices.py  requirements.txt  simulate_ffc.py  test_company_data.py  test_ff_factors.py
(+63 files in other folders)
